force-app/base/main/default/objects/Catalogue_Item__c/Catalogue_Item__c.object-meta.xml
<CustomObject>
    <description>A sellable line in the wholesale catalogue. The record every downstream process hangs off.</description>
    <label>Catalogue Item</label>
    <nameField>
        <label>Catalogue Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Catalogue Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>