force-app/base/main/default/objects/Catalogue_Item__c/fields/Current_Price__c.field-meta.xml
<CustomField>
    <fullName>Current_Price__c</fullName>
    <label>Current Price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>