force-app/base/main/default/objects/Catalogue_Item__c/fields/Item_Code__c.field-meta.xml
<CustomField>
    <fullName>Item_Code__c</fullName>
    <externalId>true</externalId>
    <label>Item Code</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>