force-app/base/main/default/objects/Catalogue_Item__c/fields/Last_Price_Change__c.field-meta.xml
<CustomField>
    <fullName>Last_Price_Change__c</fullName>
    <label>Last Price Change</label>
    <type>DateTime</type>
</CustomField>