force-app/base/main/default/objects/Catalogue_Item__c/fields/Listing_Count__c.field-meta.xml
<CustomField>
    <fullName>Listing_Count__c</fullName>
    <label>Listing Count</label>
    <summaryForeignKey>Manufacturer_Listing__c.Catalogue_Item__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>