force-app/base/main/default/objects/Catalogue_Item__c/fields/Storage_Temp__c.field-meta.xml
<CustomField>
    <fullName>Storage_Temp__c</fullName>
    <label>Storage Temp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ambient</fullName>
                <default>true</default>
                <label>Ambient</label>
            </value>
            <value>
                <fullName>Cold Chain 2-8C</fullName>
            </value>
            <value>
                <fullName>Frozen -20C</fullName>
            </value>
            <value>
                <fullName>Controlled Substance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>